Dashboard Product index & show methods created
